PO-2255 - code review changes